0.14.2 - in development
-----------------------

0.14.1 - 2009-09-10
-------------------
Maintenance release:

 * qannotate:
   * Fixed a bug when annotating a file in a branch with no working tree.
     (Bug 419477)
   * Fixed a bug were the logwidget would crash trying to render some graphs.
     (Bug 417895)
   * Fixed a bug were it was not possible to annotate files that have been
     deleted. (Bug 419790)
   * Fixed a bug where opening a per file diff would crash with a
     ObjectNotLocked error in a 2a branch. (Bug 426688)
 * qlog:
   * Fixed a bug where it was not possible to do any file list context menu
     actions on a file that was renamed in the revision that you were viewing.
     (Bug 418340)
   * Fixed a graph layout bug, where if the first revions of a brach was
     filter, there was no non direct line to it. (Bug 417895)
   * Removed superfluous twisties at the end of a filterted branch line.
     (Bug 419784)
   * Fixed a bug where branch lables would show on the wrong revisions.
     (Bug 423201)
 * qcommit:
   * Show a friendly error message when tring to commit a specific file,
     and there are pending merges. (Bug 417210)
 * qbrowse:
   * Fixed a bug where the window would crash with a ObjectNotLocked error
     when expanded a folder in a 2a branch. (Bug 424258)
 * Handle errors raised from _qbzr_run methods and the __init__ methods that
   they call, so that ui-mode is honoured when they are reported. (Bug 420534)


0.14 "Eucalyptus" - 2009-08-21
-------------------------------
What's new in this release: 

 * we have 4 new dialogs (qbind, qunbind, qexport and quncommit).
 * better help for plugin itself (now `bzr help qbzr` gives you
   useful info).
 * qcommit and uncommit hook now can store revision message and
   information about bugfixes for revision, this information automatically
   restored on next qcommit run in this branch.
 * most q-commands now able to return exit code 0 when operation 